fixed layout issues

--- a/css/challenge.css
+++ b/css/challenge.css
@@ -714,9 +714,9 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 15px 35px;
   border: none;
   border-radius: 10px;
-  background-color: #d37ab9;
+  background-color: #8d1853;
   font-size: 15px;
-  color: #45575f;
+  color: #f0f6f1;
   margin-top: 30px;
 }
 
